[project]
name = "constraint-dsl"
version = "0.1.0"
description = "Declarative YAML-like language for constraint graphs in the SuperInstance ecosystem"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "constraint-theory-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["constraint_dsl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
